src/objects/OrderMonthlyVolume__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>OrderMonthlyVolumes</relationshipLabel>
        <relationshipName>OrderMonthlyVolumes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDefault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrdeVolumeType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OrdeVolumeType</label>
        <referenceTo>OrdeVolumeType__c</referenceTo>
        <relationshipLabel>OrderMonthlyVolumes</relationshipLabel>
        <relationshipName>OrderMonthlyVolumes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Volume__c</fullName>
        <label>Volume</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>OrderMonthlyVolume</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>omv{00000000}</displayFormat>
        <label>OrderMonthlyVolume Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OrderMonthlyVolumes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>